--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.460.0",
     "nanoid": "^5.1.6",
     "next": "^15.0.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.0",
